# capital_gains_designer

./: .gitignore  2017_gains (13) edited.xlsm  2017_gains (13).csv  2017_gains (13)_edited.xlsx  2017_gains (21) edited.xlsm  2017_gains (21).csv  2017_gains (21)_edited.xlsx  2018_gains (5).csv  2018_gains edited.xlsm  2018_gains.csv  2018_gains_edited.xlsx  2018_gains_edited_old.xlsx  README.md  capital_gains_auto_py_cfg.json  dollar values.xlsx  env.yml  functions.py  games.py  main.py  main.spec  pyproject.toml  rates.xlsx  setup.py  yazigmizt.xlsx  גירסא ישנה ראה הערות בבקשה.xlsm
capital_gains/: functions.py  game.py  main.py
