[tool.poetry]
name = "capital_gains_designer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
auto-py-to-exe = "^2.7.1"
ipython = "^7.14.0"
numpy = "^1.18.4"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
requests = "^2.23.0"
scipy = "^1.4.1"
xlrd = "^1.2.0"
xlsxwriter = "^1.2.8"
pywin32 = "^227"
openpyxl = "^3.0.3"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pylint = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
